add new Heading and paragraph

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <h1>Muhammad Muzzammil</h1>
 <p>My name is Muhammad Muzzammil. I am 17 year old. My father name is Abdul Hafeez.</p>
+<h2>Muhammad Muzzammil</h2>
+<p>My name is Muhammad Muzzammil. I am 17 year old. My father name is Abdul Hafeez.</p>
